show tabs in bx menu refs #115

--- a/app/views/bx_menu/index.html.erb
+++ b/app/views/bx_menu/index.html.erb
@@ -1,1 +1,6 @@
-<h2>BxMenuController#index</h2>
+<%# coding: utf-8 %>
+<h2><%=l(:label_bx)%></h2>
+
+<%= render_tabs bx_tabs %>
+
+<% html_title(l(:label_bx)) -%>
