refs #115 implements resources#index partially.

--- a/app/views/bx_menu/index.html.erb
+++ b/app/views/bx_menu/index.html.erb
@@ -1,6 +1,6 @@
 <%# coding: utf-8 %>
-<h2><%=l(:label_bx)%></h2>
+<h2><%=l("bx.label.bx")%></h2>
 
 <%= render_tabs bx_tabs %>
 
-<% html_title(l(:label_bx)) -%>
+<% html_title(l("bx.title.bx")) -%>
