--- a/app/views/bx_resources/_index.html.erb
+++ b/app/views/bx_resources/_index.html.erb
@@ -1,2 +1,19 @@
 <%# coding: utf-8 %>
-<% html_title(l(:label_bx_resources)) %>
+<% html_title(l("bx.title.resources")) %>
+<% if User.current.allowed_to?(:bx_manage_resources, @project) %>
+<p><%= link_to l("bx.label.new_resource"), new_project_resource_path(@project), :class => 'icon icon-add' %></p>
+<% end %>
+<% roots = BxResourceNode.roots(@project) %>
+<% if roots.empty? %>
+<p class="nodata"><%= l(:label_no_data) %></p>
+<% else %>
+<ul>
+  <% roots.each do |root| %>
+  <li><%= root.name %></li>
+  <% end %>
+</ul>
+<% end %>
+<% if User.current.allowed_to?(:bx_manage_resources, @project) %>
+<p><%= link_to l("bx.label.new_resource"), new_project_resource_path(@project), :class => 'icon icon-add' %></p>
+<% end %>
+
