refs #111 implements show edit form.

--- a/app/views/bx_menu/index.html.erb
+++ b/app/views/bx_menu/index.html.erb
@@ -1,6 +1,4 @@
 <%# coding: utf-8 %>
-<h2><%=l("bx.label.bx")%></h2>
+<%= bx_title %>
 
 <%= render_tabs bx_tabs %>
-
-<% html_title(l("bx.title.bx")) -%>
