--- a/app/views/bx_resources/_index.html.erb
+++ b/app/views/bx_resources/_index.html.erb
@@ -1,7 +1,6 @@
 <%# coding: utf-8 %>
-<% html_title(l("bx.title.resources")) %>
 <% if User.current.allowed_to?(:bx_manage_resources, @project) %>
-<p><%= link_to l("bx.label.new_resource"), new_project_resource_path(@project), :class => 'icon icon-add' %></p>
+  <p><%= link_to l("bx.label.new_resource"), new_root_project_resources_path(@project), :class => 'icon icon-add', :remote => true %></p>
 <% end %>
 <% roots = BxResourceNode.roots(@project) %>
 <% if roots.empty? %>
@@ -14,6 +13,6 @@
 </ul>
 <% end %>
 <% if User.current.allowed_to?(:bx_manage_resources, @project) %>
-<p><%= link_to l("bx.label.new_resource"), new_project_resource_path(@project), :class => 'icon icon-add' %></p>
+  <p><%= link_to l("bx.label.new_resource"), new_root_project_resources_path(@project), :class => 'icon icon-add', :remote => true %></p>
 <% end %>
 
