refs #111 - add project attribute to BxRootResourceForm. - remove branche_codes, branche_names from BxRootResourceForm.   branch setting shoudl be work in show page.

--- a/app/views/bx_resources/_new_root.html.erb
+++ b/app/views/bx_resources/_new_root.html.erb
@@ -1,5 +1,5 @@
 <%# coding: utf-8 %>
-<div class="error_erea">
+<div class="bx_notification">
   <%= error_messages_for @form %>
 </div>
 <%= labelled_form_for :form, @form, :url => create_root_project_resources_path(@project), :remote => true do |f| %>
