--- a/app/views/bx_resource_branches/new.html.erb
+++ b/app/views/bx_resource_branches/new.html.erb
@@ -1,1 +1,13 @@
-<h2>BxResourceBranchesController#new</h2>
+<%# coding: utf-8 %>
+<%= bx_title %>
+
+<%= bx_tabs params[:tab] %>
+
+<div class="tab-content">
+  <%= error_messages_for @form %>
+  <%= labelled_form_for :form, @form, :url => project_bx_resource_branches_path(@project, @resource) do |f| %>
+    <%= render :partial => "form", :locals => { :f => f, :form => @form } %>
+    <%= f.submit l(:button_create) %>
+    <%= link_to l(:button_cancel), project_bx_root_resource_path(@project, @resource) %>
+  <% end %>
+</div>
