add update branch feature's testcases.

--- a/app/views/bx_resource_branches/new.html.erb
+++ b/app/views/bx_resource_branches/new.html.erb
@@ -6,6 +6,7 @@
 <div class="tab-content">
   <%= error_messages_for @form %>
   <%= labelled_form_for :form, @form, :url => project_bx_resource_branches_path(@project, @resource) do |f| %>
+    <%= f.hidden_field :root_node_id %>
     <%= render :partial => "form", :locals => { :f => f, :form => @form } %>
     <%= f.submit l(:button_create) %>
     <%= link_to l(:button_cancel), project_bx_root_resource_path(@project, @resource) %>
