--- a/app/views/bx_resource_branches/edit.html.erb
+++ b/app/views/bx_resource_branches/edit.html.erb
@@ -5,8 +5,7 @@
 
 <div class="tab-content">
   <%= error_messages_for @form %>
-  <%= labelled_form_for :form, @form, :url => project_bx_resource_branch_path(@project, @form.root_node_id, @branch), :method => :put do |f| %>
-    <%= f.hidden_field :lock_version %>
+  <%= labelled_form_for :form, @form, :url => project_bx_branch_path(@project, @branch), :method => :put do |f| %>
     <%= render :partial => "form", :locals => { :f => f, :form => @form } %>
     <%= f.submit l(:button_update) %>
     <%= link_to l(:button_cancel), project_bx_root_resource_path(@project, @form.root_node_id) %>
