--- a/app/views/bx_resources/index.html.erb
+++ b/app/views/bx_resources/index.html.erb
@@ -5,19 +5,19 @@
 
 <div class="tab-content">
 <% if User.current.allowed_to?(:bx_manage_resources, @project) %>
-  <p><%= link_to l("bx.label.new_resource"), new_project_bx_root_resource_path(@project), :class => 'icon icon-add' %></p>
+  <p><%= link_to l("bx.label.category.new"), new_project_bx_category_path(@project), :class => 'icon icon-add' %></p>
 <% end %>
-<% roots = BxResourceNode.roots(@project) %>
-<% if roots.empty? %>
+<% categories = BxResourceCategory.where(:project_id => @project.id) %>
+<% if categories.empty? %>
   <p class="nodata"><%= l(:label_no_data) %></p>
 <% else %>
   <ul>
-    <% roots.each do |root| %>
-    <li><%= link_to root.summary, project_bx_root_resource_path(@project, root) %></li>
+    <% categories.each do |category| %>
+    <li><%= link_to category.name, project_bx_category_path(@project, category) %></li>
     <% end %>
   </ul>
 <% end %>
 <% if User.current.allowed_to?(:bx_manage_resources, @project) %>
-  <p><%= link_to l("bx.label.new_resource"), new_project_bx_root_resource_path(@project), :class => 'icon icon-add' %></p>
+  <p><%= link_to l("bx.label.category.new"), new_project_bx_category_path(@project), :class => 'icon icon-add' %></p>
 <% end %>
 </div>
