display history details and relational issue links at category show page.

--- a/app/views/bx_resource_categories/show.html.erb
+++ b/app/views/bx_resource_categories/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="bx_category_box">
   <%= bx_category_title("bx.label.category.information") %>
-  <dl class="bx_infomations">
+  <dl class="bx_informations">
     <dt><%= l("bx.label.category.name") %> :</dt>
     <dd><%= @category.name %></dd>
     <dt><%= l("bx.label.category.description") %> :</dt>
@@ -56,19 +56,38 @@
 <% else %>
   <% @category.histories.each do |history| %>
   <div class="bx_history">
-    <dl class="bx_infomations">
+    <dl class="bx_informations">
       <dt><%= l("bx.label.history.changed_by") %> :</dt>
       <dd><%= link_to_user(history.changed_user) %></dd>
       <dt><%= l("bx.label.history.changed_at") %> :</dt>
       <dd><%= format_time(history.changed_at) %></dd>
       <dt><%= l("bx.label.history.operation") %> :</dt>
-      <dd><%= l("bx.label.history.operations.#{history.operation}", :key => history.key) %><%= bx_history_details_link(history) %></dd>
+      <dd><%= l("bx.text.history_operations.#{history.operation}", :key => history.key) %></dd>
+    <% if history.operation_type != "delete" %>
+      <dt><%= l("bx.label.history.details") %> :</dt>
+      <dd>
+        <ul>
+      <% history.details.each do |detail| %>
+          <li><%= bx_history_details_note(history, detail) %></li>
+      <% end %>
+        </ul>
+      </dd>
+    <% end %>
+    <% if history.issues.present? %>
+      <dt><%= l("bx.label.relational_issues") %> :</dt>
+      <dd>
+        <ul>
+      <% history.issues.each do |issue| %>
+          <li><%= link_to_issue(issue) %></li>
+      <% end %>
+        </ul>
+      </dd>
+    <% end %>
     </dl>
-    <div class="bx_history_details">
-      TODO:
-    </div>
   </div>
-  </dl>
+  <% if @category.histories.last != history %>
+  <hr/>
+  <% end %>
   <% end %>
   </table>
 <% end %>
