--- a/app/views/bx_resources/_tree.html.erb
+++ b/app/views/bx_resources/_tree.html.erb
@@ -8,4 +8,7 @@
   </ul>
 </div>
 <% end %>
+<% Bx.rendering_tree = true %>
+<% Rails.logger.debug("[bx_debug][thread_dump1] : #{Thread.current.inspect}") %>
+
 
