--- a/app/views/bx_resources/show.html.erb
+++ b/app/views/bx_resources/show.html.erb
@@ -28,7 +28,7 @@
   <dl class="bx-informations">
   <% @resource.category.branches.each do |branch| %>
     <dt><%= "#{branch.name} [#{branch.code}]" %> :</dt>
-    <dd><%= @resource.values.detect { |value| value.branch_id == branch.id }.try(:value) %></dd>
+    <dd><%= @resource.values.detect { |value| value.branch_id == branch.id }.try(:value) || "&nbsp;".html_safe %></dd>
   <% end %>
   </dl>
 </div>
