modify class name to bx-content-box from bx-category-box.

--- a/app/views/bx_histories/_list.html.erb
+++ b/app/views/bx_histories/_list.html.erb
@@ -1,5 +1,5 @@
 <%# coding: utf-8 %>
-<div class="bx-category-box">
+<div class="bx-content-box">
   <%= bx_category_title("bx.label.history.list") %>
 <% if histories.empty? %>
   <p class="nodata"><%= l(:label_no_data) %></p>
