--- a/app/views/bx_resource_categories/show.html.erb
+++ b/app/views/bx_resource_categories/show.html.erb
@@ -3,7 +3,7 @@
 
 <%= bx_tabs params[:tab] %>
 
-<div class="bx-category-box">
+<div class="bx-content-box">
   <% if User.current.allowed_to?(:bx_manage_resources, @project) %>
     <div class="contextual">
       <%= link_to l("bx.label.resource.add"), new_project_bx_resource_path(@project, :category_id => @category), :class => 'icon icon-duplicate' %>
@@ -20,7 +20,7 @@
   </dl>
 </div>
 
-<div class="bx-category-box">
+<div class="bx-content-box">
   <%= bx_category_title("bx.label.branch.list") %>
 <% if @category.branches.empty? %>
   <p class="nodata"><%= l(:label_no_data) %></p>
