add marker to resource tree node.

--- a/app/views/bx_resources/_tree.html.erb
+++ b/app/views/bx_resources/_tree.html.erb
@@ -3,7 +3,8 @@
 <ul>
   <% resources.each do |resource| %>
   <li>
-    <%= link_to(resource.code, project_bx_resource_path(@project, resource)) %>
+    <%= bx_resource_mark(resource) %>
+    <%= link_to(resource.code, project_bx_resource_path(@project, resource), :style => "vertical-align: middle;") %>
     <%= render :partial => "bx_resources/tree", :locals => { :resources => resource.children } %>
   </li>
   <% end %>
