ajudst resource tree style.

--- a/app/views/bx_resources/_tree.html.erb
+++ b/app/views/bx_resources/_tree.html.erb
@@ -4,7 +4,7 @@
   <% resources.each do |resource| %>
   <li>
     <%= bx_resource_mark(resource) %>
-    <%= link_to(resource.code, project_bx_resource_path(@project, resource), :style => "vertical-align: middle;") %>
+    <%= link_to(resource.code, project_bx_resource_path(@project, resource), :class => "bx-resource-node-link") %>
     <%= render :partial => "bx_resources/tree", :locals => { :resources => resource.children } %>
   </li>
   <% end %>
