--- a/app/views/bx_resources/_form.html.erb
+++ b/app/views/bx_resources/_form.html.erb
@@ -3,13 +3,13 @@
 <%= f.hidden_field :parent_id %>
 <%= f.hidden_field :lock_version %>
 <div class="box tabular">
-  <p><%= f.text_field :code, :label => bx_form_label(form, :code), :required => true, :size => 100 %></p>
+  <p><%= f.text_field :code, :label => bx_form_label(form, :code), :required => true %></p>
   <p><%= f.text_field :summary, :label => bx_form_label(form, :summary), :size => 120 %></p>
   <p><%= f.text_field :relational_issues, :label => l("bx.label.relational_issues") %></p>
 <% form.branches.each do |branch| %>
   <p>
     <%= label_tag "form_branch_value_#{branch.id}", branch.name %>
-    <%= text_field_tag "form[branch_value_#{branch.id}]", form.branch_values[branch.id], :class => "bx-branch-value", :size => 120 %>
+    <%= text_area_tag "form[branch_value_#{branch.id}]", form.branch_values[branch.id], :class => "bx-branch-value", :size => "80x5" %>
   </p>
 <% end %>
 </div>
