--- a/app/views/bx_resources/show.html.erb
+++ b/app/views/bx_resources/show.html.erb
@@ -29,7 +29,7 @@
   <dl class="bx-informations">
   <% @resource.branches.each do |branch| %>
     <dt><%= "#{branch.name} [#{branch.code}]" %> :</dt>
-    <dd><%= @resource.value(branch) || "&nbsp;".html_safe %></dd>
+    <dd><%= hbr(@resource.value(branch) || "&nbsp;".html_safe) %></dd>
   <% end %>
   </dl>
 </div>
