--- a/app/views/bx_resources/edit.html.erb
+++ b/app/views/bx_resources/edit.html.erb
@@ -1,1 +1,13 @@
-<h2>BxResourcesController#edit</h2>
+<%# coding: utf-8 %>
+<%= bx_title %>
+
+<%= bx_tabs params[:tab] %>
+
+<div class="tab-content">
+  <%= error_messages_for @form %>
+  <%= labelled_form_for :form, @form, :url => project_bx_resource_path(@project, @resource), :method => :put do |f| %>
+    <%= render :partial => "form", :locals => { :f => f, :form => @form } %>
+    <%= f.submit l(:button_update) %>
+    <%= link_to l(:button_cancel), project_bx_resource_path(@project, @resource) %>
+  <% end %>
+</div>
