--- a/app/views/bx_resources/show.html.erb
+++ b/app/views/bx_resources/show.html.erb
@@ -18,7 +18,7 @@
     <dt><%= l("bx.label.resource.code") %> :</dt>
     <dd><%= @resource.code %></dd>
     <dt><%= l("bx.label.resource.path") %> :</dt>
-    <dd><%= @resource.path(":") %></dd>
+    <dd><%= @resource.path %></dd>
     <dt><%= l("bx.label.resource.summary") %> :</dt>
     <dd><%= @resource.summary %></dd>
   </dl>
