--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -78,3 +78,17 @@
   vertical-align: middle;
 }
 
+.bx-resource-values {
+  width: 100%;
+}
+
+.bx-resource-values th {
+  text-align: left;
+  white-space: nowrap;
+  padding: 2px;
+}
+
+.bx-resource-values td {
+  width: 100%;
+  padding: 2px 2px 2px 10px;
+}
